<resources>


    <string name="app_name">E-Commerce</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_welcome_msg">Welcome to E-Commerce</string>
    <string name="sign_in_msg">Sign in to continue</string>
    <string name="email_et_hint">Your Email</string>
    <string name="password_et_hint">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="or_txt">Or</string>
    <string name="google_signin_btn_msg">Login with Google</string>
    <string name="facebook_signin_btn_msg">Login with Facebook</string>
    <string name="forgot_password_msg">Forgot Password</string>
    <string name="dont_have_a_account_msg">Don’t have an account?</string>
    <string name="register">Register</string>
    <string name="loading">Loading</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="google_sign_in_field_msg">Google sign in failed, please retry again later.</string>
    <string name="generic_err_msg">Error please try again later.</string>
    <string name="register_welcome_msg">Let’s Get Started</string>
    <string name="sign_up_msg">Create a new account</string>
    <string name="name_et_hint">Full Name</string>
    <string name="password_again_et_hint">Password Again</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account_msg">have an account?</string>
    <string name="google_signup_btn_msg">Sign up with Google</string>
    <string name="facebook_signup_btn_msg">Sign up with facebook</string>
    <string name="forget_password_msg">Enter your email, to send an email to update your password.</string>
    <string name="send">Send</string>
    <string name="log_out">Log Out</string>
    <string name="app_icon">App icon</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="offer">Offer</string>
    <string name="account">Account</string>
    <string name="search_products">Search Products</string>
    <string name="category">Category</string>
    <string name="more_categories">More Categories</string>
    <string name="select_country_msg">Please select your country</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="see_more">See more</string>
    <string name="mega_sale">Mega Sale</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="select_size">Select size</string>
    <string name="select_color">Select Color</string>
    <string name="description">Description</string>
    <string name="user_image">user image\n</string>
    <string name="full_screen_image">full screen image</string>
    <string name="all_reviews">All Reviews</string>
    <string name="star_1">1 ⭐</string>
    <string name="star_2">2 ⭐</string>
    <string name="star_3">3 ⭐</string>
    <string name="star_4">4 ⭐</string>
    <string name="star_5">5 ⭐</string>
    <string name="review_product">Review Product</string>
    <string name="write_review">Write Review</string>
    <string name="add_review_describition">Please write Overall level of satisfaction with your shipping / Delivery Service</string>
    <string name="write_your_review">Write Your Review</string>
    <string name="write_your_review_here">Write your review here</string>
    <string name="add_photo">Add Photo</string>
    <string name="rate_of_product">rate of product</string>
    <string name="send_review">send review</string>
    <string name="no_reviews_yet">No reviews yet</string>
    <string name="be_the_first_to_review">Be the First to Review</string>
    <string name="you_can_only_submit_one_review_per_product">Notice : ⭐ You can only submit one review per product.</string>
    <string name="add_review_image">Add Review Image</string>
    <string name="product_not_found">Product Not Found</string>
    <string name="no_result">NO Result</string>
    <string name="thank_you_for_shopping_using_lafyuu">thank you for shopping using lafyuu</string>
    <string name="back_to_home">Back to Home</string>
    <string name="filter_and_sort_products">Filter and Sort Products</string>
    <string name="filter_by">Filter by</string>
    <string name="available_only">Available only</string>
    <string name="price">Price</string>
    <string name="rating">Rating</string>
    <string name="low_to_high">Low to High</string>
    <string name="high_to_low">High to Low</string>
    <string name="apply">Apply</string>
    <string name="sort_by">Sort by</string>
    <string name="clear_all">Clear All</string>
    <string name="less_than_3_stars">Less than 3 stars</string>
    <string name="_3_stars_and_above">3 stars and above</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="filter_button">Filter Button</string>
    <string name="search_icon">Search Icon</string>
    <!--    <string name="server_client_id">322843996565-r72jde9qij54q1fbj2frso8n99m3qmr7.apps.googleusercontent.com</string>-->


</resources>