<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.example.ui.products.viewmodel.ProductDetailsViewModel" />

        <variable
            name="product"
            type="com.example.ui.products.model.ProductUIModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:background="@color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways|snap">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@color/white"
                    app:layout_collapseMode="pin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingTop="32dp">

                        <ImageView
                            android:id="@+id/back_iv"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:padding="10dp"
                            android:src="@drawable/ic_back_arrow" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/review_title_tv"
                            style="@style/TitleTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="14dp"
                            android:text="@string/write_review" />
                    </LinearLayout>
                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <!-- Use NestedScrollView to appear below AppBar and allow scrolling -->
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:layout_marginStart="10dp"

                android:orientation="vertical">

                <TextView
                    style="@style/TitleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_review_describition"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/rating_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/star1"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:contentDescription="@string/rate_of_product"
                        android:padding="2dp"
                        android:src="@drawable/star_empty" />

                    <ImageView
                        android:id="@+id/star2"
                        android:layout_width="35dp"
                        android:layout_height="35dp"

                        android:contentDescription="@string/rate_of_product"
                        android:padding="2dp"
                        android:src="@drawable/star_empty" />

                    <ImageView
                        android:id="@+id/star3"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:contentDescription="@string/rate_of_product"
                        android:padding="2dp"
                        android:src="@drawable/star_empty" />

                    <ImageView
                        android:id="@+id/star4"
                        android:layout_width="35dp"
                        android:layout_height="35dp"

                        android:contentDescription="@string/rate_of_product"
                        android:padding="2dp"
                        android:src="@drawable/star_empty" />

                    <ImageView
                        android:id="@+id/star5"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:contentDescription="@string/rate_of_product"
                        android:padding="2dp"
                        android:src="@drawable/star_empty" />


                    <!--                    <RatingBar-->
                    <!--                        android:id="@+id/ratingBar"-->
                    <!--                        android:layout_width="wrap_content"-->
                    <!--                        android:layout_height="wrap_content"-->
                    <!--                        android:layout_marginStart="-22dp"-->
                    <!--                        android:numStars="5"-->
                    <!--                        android:rating="0"-->
                    <!--                        android:scaleX="0.8"-->
                    <!--                        android:scaleY="0.8"-->
                    <!--                        android:stepSize="1"-->
                    <!--                        android:theme="@style/Widget.AppCompat.RatingBar" />-->

                    <TextView
                        android:id="@+id/ratingText"
                        style="@style/MessageTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="0/5" />
                </LinearLayout>

                <TextView
                    style="@style/TitleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/write_your_review"

                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/review_et"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginTop="12dp"
                    android:autofillHints="username"
                    android:background="@drawable/edit_text_bg"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="top|start"
                    android:hint="@string/write_your_review_here"
                    android:inputType="text"
                    android:maxLines="6"
                    android:minLines="3"
                    android:padding="14dp"
                    android:textColor="@color/neutral_grey"
                    android:textColorHint="@color/neutral_grey"
                    android:textSize="14sp" />


                <TextView
                    style="@style/TitleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"

                    android:text="@string/add_photo"
                    android:textSize="14sp" />


                <ImageView
                    android:id="@+id/submit_review_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/send_review"
                    android:padding="2dp"
                    android:elevation="10dp"
                    android:src="@drawable/send_ic" />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>